--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^3.3.5",
+    "@lottiefiles/lottie-player": "^1.0.4",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.0.1",
-    "postcss": "^8.2.8"
+    "fibers": "^5.0.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^10.2.0"
   }
 }
