--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@lottiefiles/lottie-player": "^1.0.4",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
